@@ -381,6 +381,9 @@ Partition name followed by "*" for the default partition, also see \fB%R\fR.
 \fBpartitionname\fR
 Partition name, also see \fB%P\fR.
 .TP
+\fBport\fR
+Node TCP port.
+.TP
 \fBpreemptmode\fR
 PreemptionMode.
 .TP
@@ -566,6 +569,9 @@ state in the form "available/idle/other/total".
 \fBPARTITION\fR
 Name of a partition.  Note that the suffix "*" identifies the
 default partition.
+.TP
+\fBPORT\fR
+Local TCP port used by slurmd on the node.
 .TP
 \fBROOT\fR
 Is the ability to allocate resources in this partition
