@@ -1234,6 +1234,7 @@ extern GtkTreeStore *create_treestore(GtkTreeView *tree_view,
 			if (!xstrcasecmp(display_data[i].name, "Node Count")
 			    || !xstrcasecmp(display_data[i].name, "CPU Count")
 			    || !xstrcasecmp(display_data[i].name, "Real Memory")
+			    || !xstrcasecmp(display_data[i].name, "Port")
 			    || !xstrcasecmp(display_data[i].name, "Tmp Disk")) {
 				gtk_tree_sortable_set_sort_func(
 					GTK_TREE_SORTABLE(treestore),
